fix(toolbar): z-index of mdc-menu positioned over mdc-tab (#656)
Closes #638

--- a/src/theme/extend/mdc-toolbar.scss
+++ b/src/theme/extend/mdc-toolbar.scss
@@ -10,3 +10,8 @@
     }
   }
 }
+
+/* Temporary workaround for #638 */
+.mdc-toolbar__section {
+  z-index: initial;
+}
